# sigpesq_agent

./: .env.example  .gitignore  README.md  agent.py  pyproject.toml  requirements.txt
.agent/: config.md  instructions.md
.agent/templates/: epic.md  task.md  user_story.md
.agent/workflows/: agile-standards.md  architectural-pattern.md  bump-version.md  verify.md
.github/workflows/: cd.yml  ci.yml  release.yml
docs/: backlog.md  constitution.md  extending_the_agent.md  requirements.md  sdd.md
docs/adr/: 0001-use-playwright.md
scripts/: bump_version.py  sync_backlog.py
src/agent_sigpesq/: __init__.py
src/agent_sigpesq/core/: __init__.py  base_agent.py  browser_factory.py
src/agent_sigpesq/services/: __init__.py  reports_service.py
src/agent_sigpesq/strategies/: __init__.py  advisorships_strategy.py  projects_strategy.py  report_download_strategy.py  research_groups_strategy.py
tests/: test_advisorships_strategy.py  test_import.py  test_projects_strategy.py  test_research_groups_strategy.py
